# parameter_parser_cpp23

./: .gitignore  CMakeLists.txt  README.md  config.cmake.in
example/: CMakeLists.txt  parameters.txt
example/include/: print_results.hpp
example/src/: main.cpp
include/parameter_parser/: reader.hpp  reader_error.hpp
reader/: CMakeLists.txt  config.cmake.in
reader/include/parameter_parser/: reader.hpp  reader_error.hpp
test_example/: CMakeLists.txt
test_example/src/: main.cpp
tests/: CMakeLists.txt  main.cpp  parameters.txt
utilities/: CMakeLists.txt  config.cmake.in
utilities/include/parameter_parser/: utilities.hpp
